--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "thinkster_django_angular_boilerplate",
+  "name": "cbhbaseapp",
   "version": "0.0.0",
-  "homepage": "https://github.com/brwr/thinkster-django-angular-boilerplate",
+  "homepage": "https://github.com/pssalman/cbhbaseapp",
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -11,13 +11,21 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.1",
-    "angular-route": "~1.3.1",
-    "angular-cookies": "~1.3.1",
-    "bootstrap": "~3.3.0",
-    "bootstrap-material-design": "~0.1.5",
+    "angular": "~1.5.0",
+    "angular-route": "~1.5.0",
+    "angular-cookies": "~1.5.0",
+    "bootstrap": "~3.3.6",
+    "bootstrap-material-design": "~0.5.9",
     "jquery": "~2.1.1",
-    "ngDialog": "~0.3.3",
-    "underscore": "~1.7.0"
+    "ngDialog": "~0.5.8",
+    "underscore": "~1.8.3"
+  },
+  "resolutions": {
+    "angular": "~1.5.0",
+    "angular-route": "~1.5.0",
+    "angular-cookies": "~1.5.0",
+    "bootstrap-material-design": "~0.5.9",
+    "ngDialog": "~0.5.8",
+    "underscore": "~1.8.3"
   }
 }
