--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thinkster_django_angular_boilerplate",
+  "name": "cbhbaseapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,18 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brwr/thinkster-django-angular-boilerplate.git"
+    "url": "https://github.com/pssalman/cbhbaseapp.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/brwr/thinkster-django-angular-boilerplate/issues"
+    "url": "https://github.com/pssalman/cbhbaseapp/issues"
   },
-  "homepage": "https://github.com/brwr/thinkster-django-angular-boilerplate",
+  "homepage": "https://github.com/pssalman/cbhbaseapp",
   "dependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.9",
-    "gulp-ng-annotate": "^0.3.3",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-uglify": "^1.0.1"
   }
 }
